attempts to fix navbar bug on mobile devices

--- a/portfolio-v2/src/App.css
+++ b/portfolio-v2/src/App.css
@@ -20,7 +20,7 @@ a {
 
 .headroom {
   z-index: 1;
-  position: fixed;
+  position: absolute;
   width: 100%;
   top: 0;
 }
